--- a/Source/IdentAuth/Deploy/Manifest.ini
+++ b/Source/IdentAuth/Deploy/Manifest.ini
@@ -32,11 +32,11 @@ Exact = ole32.dll
 Exact = MSVBVM60.DLL
 
 [ProgramFiles]
-File = Ident.exe|212992|10/10/2022 12:15:18 PM
+File = Ident.exe|216216|10/20/2022 6:49:10 AM
 File = Ident.ini|1626|12/19/2019 1:12:28 AM
 File = license.txt|2581|5/3/2020 3:10:50 PM
 File = Neotext.org.url|78|7/24/2017 3:30:00 AM
-File = Reload.exe|53248|10/10/2022 12:15:18 PM
+File = Reload.exe|56472|10/20/2022 6:49:10 AM
 File = VB1CD.tmp|3492|9/26/2022 4:42:28 PM
 File = VB1DD.tmp|3492|9/26/2022 4:44:26 PM
 File = VB1EA.tmp|3492|9/26/2022 4:45:28 PM
