--- a/Source/To-Doster/Deploy/Manifest.ini
+++ b/Source/To-Doster/Deploy/Manifest.ini
@@ -41,7 +41,7 @@ Exact = MSVBVM60.DLL
 File = license.txt|2581|5/3/2020 3:10:20 PM
 File = Neotext.org.url|78|7/24/2017 3:30:00 AM
 File = todoster.asp|5714|11/24/2013 6:39:00 PM
-File = ToDoster.exe|172032|9/16/2022 4:42:30 PM
+File = ToDoster.exe|175256|10/20/2022 6:49:09 AM
 File = todoster.mdb|114688|10/21/2015 8:08:00 PM
 File = VB100.tmp|3492|10/5/2022 7:31:44 AM
 File = VB10A.tmp|3492|10/5/2022 7:32:25 AM
