--- a/Source/IdentAuth/Deploy/Manifest.ini
+++ b/Source/IdentAuth/Deploy/Manifest.ini
@@ -32,19 +32,11 @@ Exact = ole32.dll
 Exact = MSVBVM60.DLL
 
 [ProgramFiles]
-File = Ident.exe|216216|10/20/2022 6:49:10 AM
+File = Ident.exe|216216|10/23/2022 6:12:39 PM
 File = Ident.ini|1626|12/19/2019 1:12:28 AM
 File = license.txt|2581|5/3/2020 3:10:50 PM
 File = Neotext.org.url|78|7/24/2017 3:30:00 AM
-File = Reload.exe|56472|10/20/2022 6:49:10 AM
-File = VB1CD.tmp|3492|9/26/2022 4:42:28 PM
-File = VB1DD.tmp|3492|9/26/2022 4:44:26 PM
-File = VB1EA.tmp|3492|9/26/2022 4:45:28 PM
-File = VB20F.tmp|3492|9/26/2022 5:07:24 PM
-File = VB261.tmp|3492|9/26/2022 5:29:54 PM
-File = VB2AD.tmp|3492|9/26/2022 5:47:41 PM
-File = VB2CE.tmp|3492|9/26/2022 5:55:16 PM
-File = VBD8.tmp|3492|9/25/2022 10:37:00 PM
+File = Reload.exe|56472|10/23/2022 6:12:39 PM
 
 [WindowsSystem32]
 System=iphlpapi.dll|94720|4/14/2008 7:00:00 AM|5.1.2600.5512 (xpsp.080413-0852)
