--- a/Source/MaxLand/Deploy/Manifest.ini
+++ b/Source/MaxLand/Deploy/Manifest.ini
@@ -37,8 +37,8 @@ File = Commands.ini|52|1/10/2021 11:12:48 PM
 File = ctrls.bmp|0|9/25/2015 4:49:54 PM
 File = drop.bmp|241078|4/13/2015 7:56:00 PM
 File = license.txt|2581|5/3/2020 3:10:44 PM
-File = MaxLandApp.exe|613528|10/20/2022 6:49:10 AM
-AllUser = MaxLandApp.mdb|143360|10/20/2022 6:49:08 AM
+File = MaxLandApp.exe|613528|10/23/2022 6:12:38 PM
+AllUser = MaxLandApp.mdb|143360|10/23/2022 6:12:35 PM
 File = mouse.cur|326|3/25/2004 1:23:00 PM
 File = Neotext.org.url|78|7/24/2017 3:30:00 AM
 File = test.bat|0|5/19/2016 10:08:46 PM
