--- a/Source/To-Doster/Deploy/Manifest.ini
+++ b/Source/To-Doster/Deploy/Manifest.ini
@@ -41,7 +41,7 @@ Exact = MSVBVM60.DLL
 File = license.txt|2581|5/3/2020 3:10:20 PM
 File = Neotext.org.url|78|7/24/2017 3:30:00 AM
 File = todoster.asp|5714|11/24/2013 6:39:00 PM
-File = ToDoster.exe|175256|10/23/2022 6:12:37 PM
+File = ToDoster.exe|175256|10/25/2022 2:33:13 AM
 File = todoster.mdb|114688|10/21/2015 8:08:00 PM
 Folder = Help|<DIR>|6/10/2021 7:17:58 AM
 File = Help\addentry.png|3585|6/2/2018 12:31:56 AM
