--- a/Source/HouseOfGlass/Deploy/Manifest.ini
+++ b/Source/HouseOfGlass/Deploy/Manifest.ini
@@ -35,8 +35,8 @@ Exact = ole32.dll
 Exact = MSVBVM60.DLL
 
 [ProgramFiles]
-File = HouseOfGlass.exe|212120|10/23/2022 6:12:37 PM
-AllUser = HouseOfGlass.mdb|143360|10/23/2022 6:12:34 PM
+File = HouseOfGlass.exe|212120|10/25/2022 2:33:13 AM
+AllUser = HouseOfGlass.mdb|143360|10/25/2022 2:33:08 AM
 File = license.txt|5379|3/6/2018 11:50:28 PM
 File = Neotext.org.url|78|7/24/2017 3:30:00 AM
 Folder = Base|<DIR>|10/7/2022 7:44:50 PM
