--- a/Source/IdentAuth/Deploy/Manifest.ini
+++ b/Source/IdentAuth/Deploy/Manifest.ini
@@ -32,11 +32,11 @@ Exact = ole32.dll
 Exact = MSVBVM60.DLL
 
 [ProgramFiles]
-File = Ident.exe|216216|10/23/2022 6:12:39 PM
+File = Ident.exe|216216|10/25/2022 2:33:17 AM
 File = Ident.ini|1626|12/19/2019 1:12:28 AM
 File = license.txt|2581|5/3/2020 3:10:50 PM
 File = Neotext.org.url|78|7/24/2017 3:30:00 AM
-File = Reload.exe|56472|10/23/2022 6:12:39 PM
+File = Reload.exe|56472|10/25/2022 2:33:17 AM
 
 [WindowsSystem32]
 System=iphlpapi.dll|94720|4/14/2008 7:00:00 AM|5.1.2600.5512 (xpsp.080413-0852)
