--- a/Source/IdentAuth/Deploy/Manifest.ini
+++ b/Source/IdentAuth/Deploy/Manifest.ini
@@ -32,19 +32,19 @@ Exact = ole32.dll
 Exact = MSVBVM60.DLL
 
 [ProgramFiles]
-File = Ident.exe|215888|10/27/2022 2:18:14 PM
-File = Ident.ini|1626|12/19/2019 1:12:28 AM
-File = license.txt|2581|5/3/2020 3:10:50 PM
-File = Neotext.org.url|78|7/24/2017 3:30:00 AM
-File = Reload.exe|56144|10/27/2022 2:18:13 PM
+File = Ident.exe|212992|10/31/2017 1:36:22 AM
+File = Ident.ini|1626|12/19/2019 12:12:28 AM
+File = license.txt|2581|5/3/2020 2:10:50 PM
+File = Neotext.org.url|78|7/24/2017 2:30:00 AM
+File = Reload.exe|53248|10/31/2017 1:36:22 AM
 
 [WindowsSystem32]
-System=iphlpapi.dll|94720|4/14/2008 7:00:00 AM|5.1.2600.5512 (xpsp.080413-0852)
-System=psapi.dll|23040|4/14/2008 7:00:00 AM|5.1.2600.5512 (xpsp.080413-2105)
-System=wsock32.dll|22528|7/27/2007 6:00:00 AM|5.1.2600.2180 (xpsp_sp2_rtm.040803-2158)
-System=advapi32.dll|616960|7/27/2007 6:00:00 AM|5.1.2600.2180 (xpsp_sp2_rtm.040803-2158)
-Shared=ntsvc.ocx|34304|12/23/2012 10:56:00 PM|1, 0, 0, 1
-Shared=MSWINSCK.OCX|124688|3/9/2004 5:45:34 PM|6.01.9782
-System=wininet.dll|666112|4/14/2008 6:42:10 AM|6.00.2900.2180 (xpsp_sp2_rtm.040803-2158)
+System=iphlpapi.dll|94720|4/14/2008 6:00:00 AM|5.1.2600.5512 (xpsp.080413-0852)
+System=psapi.dll|23040|4/14/2008 6:00:00 AM|5.1.2600.5512 (xpsp.080413-2105)
+System=wsock32.dll|22528|7/27/2007 5:00:00 AM|5.1.2600.2180 (xpsp_sp2_rtm.040803-2158)
+System=advapi32.dll|616960|7/27/2007 5:00:00 AM|5.1.2600.2180 (xpsp_sp2_rtm.040803-2158)
+Shared=ntsvc.ocx|34304|12/23/2012 9:56:00 PM|1, 0, 0, 1
+Shared=MSWINSCK.OCX|124688|3/9/2004 4:45:34 PM|6.01.9782
+System=wininet.dll|666112|4/14/2008 5:42:10 AM|6.00.2900.2180 (xpsp_sp2_rtm.040803-2158)
 
 
