--- a/Source/IdentAuth/Deploy/Manifest.ini
+++ b/Source/IdentAuth/Deploy/Manifest.ini
@@ -32,11 +32,11 @@ Exact = ole32.dll
 Exact = MSVBVM60.DLL
 
 [ProgramFiles]
-File = Ident.exe|216168|3/8/2024 1:05:35 PM
+File = Ident.exe|216168|3/11/2024 7:21:22 AM
 File = Ident.ini|1626|12/19/2019 12:12:28 AM
 File = license.txt|2581|5/3/2020 2:10:50 PM
 File = Neotext.org.url|78|7/24/2017 2:30:00 AM
-File = Reload.exe|56424|3/8/2024 1:05:34 PM
+File = Reload.exe|56424|3/11/2024 7:21:21 AM
 
 [WindowsSystem32]
 System=iphlpapi.dll|94720|4/14/2008 6:00:00 AM|5.1.2600.5512 (xpsp.080413-0852)
