--- a/Source/HouseOfGlass/Deploy/Manifest.ini
+++ b/Source/HouseOfGlass/Deploy/Manifest.ini
@@ -35,8 +35,8 @@ Exact = ole32.dll
 Exact = MSVBVM60.DLL
 
 [ProgramFiles]
-File = HouseOfGlass.exe|212072|3/8/2024 1:05:31 PM
-AllUser = HouseOfGlass.mdb|143360|3/8/2024 1:05:26 PM
+File = HouseOfGlass.exe|212072|3/11/2024 7:21:18 AM
+AllUser = HouseOfGlass.mdb|143360|3/11/2024 7:21:13 AM
 File = license.txt|5379|3/6/2018 10:50:28 PM
 File = Neotext.org.url|78|7/24/2017 2:30:00 AM
 Folder = Base|<DIR>|10/7/2022 6:44:50 PM
