--- a/Source/To-Doster/Deploy/Manifest.ini
+++ b/Source/To-Doster/Deploy/Manifest.ini
@@ -41,7 +41,7 @@ Exact = MSVBVM60.DLL
 File = license.txt|2581|5/3/2020 2:10:20 PM
 File = Neotext.org.url|78|7/24/2017 2:30:00 AM
 File = todoster.asp|5714|11/24/2013 5:39:00 PM
-File = ToDoster.exe|175208|3/8/2024 1:05:31 PM
+File = ToDoster.exe|175208|3/11/2024 7:21:18 AM
 File = todoster.mdb|114688|10/21/2015 7:08:00 PM
 Folder = Help|<DIR>|6/10/2021 6:17:58 AM
 File = Help\addentry.png|3585|6/1/2018 11:31:56 PM
