NTDirectX and NTControls30
Both unused projects have some changes.

--- a/Source/Blacklawn/Deploy/Manifest.ini
+++ b/Source/Blacklawn/Deploy/Manifest.ini
@@ -35,9 +35,9 @@ Exact = ole32.dll
 Exact = MSVBVM60.DLL
 
 [ProgramFiles]
-File = Blacklawn.exe|2554984|3/11/2024 7:21:17 AM
-AllUser = Blacklawn.mdb|151552|3/11/2024 7:21:13 AM
-File = BlkLServer.exe|85096|3/11/2024 7:21:17 AM
+File = Blacklawn.exe|2554984|3/24/2024 11:59:18 PM
+AllUser = Blacklawn.mdb|151552|3/24/2024 11:59:13 PM
+File = BlkLServer.exe|85096|3/24/2024 11:59:18 PM
 File = BlkLServer.ini|355|10/15/2017 8:03:00 PM
 File = Commands.ini|85|3/26/2018 3:45:00 AM
 File = license.txt|2581|5/3/2020 2:11:14 PM
@@ -241,7 +241,7 @@ Shared=dx8vb.dll|1227264|4/14/2008 6:00:00 AM|5.03.2600.5512 (xpsp.080413-0845)
 Shared=msjro.dll|102400|12/23/2012 10:56:04 PM|2.81.1117.0 (xpsp_sp2_rtm.040803-2158)
 Shared=msado15.dll|536576|8/4/2004 12:56:44 AM|2.81.1117.0 (xpsp_sp2_rtm.040803-2158)
 Shared=userenv.dll|727040|4/14/2008 5:42:10 AM|5.1.2600.5512 (xpsp.080413-2113)
-Shared=NTService20.dll|142440|3/11/2024 7:21:16 AM|2.00.0002
+Shared=NTService20.dll|142440|3/24/2024 11:59:17 PM|2.00.0002
 Shared=ntsvc.ocx|34304|12/23/2012 9:56:00 PM|1, 0, 0, 1
 
 
