--- a/Source/Max-FTP/Deploy/Manifest.ini
+++ b/Source/Max-FTP/Deploy/Manifest.ini
@@ -63,15 +63,15 @@ Shared=msxml2.dll
 [ProgramFiles]
 File = License.txt|2581|5/3/2020 2:10:54 PM
 File = MaxFTP.def|0|2/16/2017 7:55:06 AM
-File = MaxFTP.exe|1539176|3/11/2024 7:21:19 AM
-AllUser = maxftp.mdb|491520|3/11/2024 7:21:13 AM
+File = MaxFTP.exe|1539176|3/24/2024 11:59:19 PM
+AllUser = maxftp.mdb|491520|3/24/2024 11:59:14 PM
 File = maxftp.pub|0|8/17/2016 2:24:30 PM
-File = MaxIDE.exe|687208|3/11/2024 7:21:18 AM
+File = MaxIDE.exe|687208|3/24/2024 11:59:19 PM
 File = MaxService.def|0|1/10/2017 10:26:20 PM
-File = MaxService.exe|265320|3/11/2024 7:21:19 AM
+File = MaxService.exe|265320|3/24/2024 11:59:19 PM
 File = MaxService.TLB|0|2/16/2017 1:58:42 AM
 File = MaxService.VBR|0|2/16/2017 1:58:42 AM
-File = MaxUtility.exe|277608|3/11/2024 7:21:19 AM
+File = MaxUtility.exe|281704|3/24/2024 11:59:20 PM
 File = Neotext.org.url|78|7/24/2017 2:30:00 AM
 Folder = Favorites|<DIR>|3/10/2024 11:17:38 AM
 File = Favorites\ftp.ietf.org.mftp|0|3/10/2017 7:25:44 PM
@@ -486,18 +486,18 @@ System=comctl32.dll|611328|7/27/2007 5:00:00 AM|5.82 (xpsp_sp2_rtm.040803-2158)
 System=wsock32.dll|22528|7/27/2007 5:00:00 AM|5.1.2600.2180 (xpsp_sp2_rtm.040803-2158)
 System=advapi32.dll|616960|7/27/2007 5:00:00 AM|5.1.2600.2180 (xpsp_sp2_rtm.040803-2158)
 Shared=userenv.dll|727040|4/14/2008 6:00:00 AM|5.1.2600.5512 (xpsp.080413-2113)
-Shared=NTControls22.ocx|417792|3/11/2024 7:20:31 AM|2.02.0406
+Shared=NTControls22.ocx|417792|3/24/2024 11:58:31 PM|2.02.0406
 Shared=MSCOMCTL.OCX|1081616|3/9/2004 4:45:46 PM|6.01.9782
 Shared=mscomct2.ocx|662288|3/9/2004 4:45:42 PM|6.01.9782
 Shared=richtx32.ocx|212240|3/9/2004 4:45:38 PM|6.01.9782
 Shared=comdlg32.ocx|152848|3/9/2004 4:45:36 PM|6.01.9782
 Shared=msado15.dll|536576|8/4/2004 12:56:44 AM|2.81.1117.0 (xpsp_sp2_rtm.040803-2158)
 Shared=scrrun.dll|151824|7/15/2000 2:10:08 PM|5.0.0.3715
-Shared=NTSchedule20.dll|56424|3/11/2024 7:21:15 AM|2.00.0461
-Shared=NTCipher10.dll|150632|3/11/2024 7:21:14 AM|1.00.0430
-Shared=NTAdvFTP61.dll|732264|3/11/2024 7:21:17 AM|6.01.0003
-Shared=NTPopup21.dll|81000|3/11/2024 7:21:15 AM|2.01.0407
-Shared=NTNodes10.dll|273512|3/11/2024 7:21:15 AM|3.01
+Shared=NTSchedule20.dll|56424|3/24/2024 11:59:15 PM|2.00.0461
+Shared=NTCipher10.dll|150632|3/24/2024 11:59:15 PM|1.00.0430
+Shared=NTAdvFTP61.dll|732264|3/24/2024 11:59:17 PM|6.01.0003
+Shared=NTPopup21.dll|81000|3/24/2024 11:59:16 PM|2.01.0407
+Shared=NTNodes10.dll|273512|3/24/2024 11:59:15 PM|3.01
 System=wininet.dll|666112|4/14/2008 5:42:10 AM|6.00.2900.2180 (xpsp_sp2_rtm.040803-2158)
 System=ws2_32.dll|82432|4/14/2008 5:42:12 AM|5.1.2600.2180 (xpsp_sp2_rtm.040803-2158)
 Shared=MSWINSCK.OCX|124688|3/9/2004 4:45:34 PM|6.01.9782
@@ -506,9 +506,9 @@ Shared=msscript.ocx|107008|3/9/2004 4:45:34 PM|1.0.0.3715
 Shared=msxml.dll|506368|4/14/2008 5:42:00 AM|8.00.7002.0
 System=TLBINF32.DLL|150528|2/23/2004|1.10.9782
 Shared=shdocvw.dll|1499136|4/14/2008 5:42:06 AM|6.00.2900.5512 (xpsp.080413-2105)
-Shared=NTService20.dll|142440|3/11/2024 7:21:16 AM|2.00.0002
-Shared=NTSound20.dll|56424|3/11/2024 7:21:16 AM|2.00.0400
-Shared=NTShell22.dll|97384|3/11/2024 7:21:15 AM|2.02.0400
+Shared=NTService20.dll|142440|3/24/2024 11:59:17 PM|2.00.0002
+Shared=NTSound20.dll|56424|3/24/2024 11:59:16 PM|2.00.0400
+Shared=NTShell22.dll|97384|3/24/2024 11:59:16 PM|2.02.0400
 Shared=ntsvc.ocx|34304|12/23/2012 9:56:00 PM|1, 0, 0, 1
 System=winmm.dll|176128|7/27/2007 5:00:00 AM|5.1.2600.2180 (xpsp_sp2_rtm.040803-2158)
 Shared=msjro.dll|102400|12/23/2012 10:56:04 PM|2.81.1117.0 (xpsp_sp2_rtm.040803-2158)
