--- a/Source/RemindMe/Deploy/Manifest.ini
+++ b/Source/RemindMe/Deploy/Manifest.ini
@@ -54,11 +54,11 @@ Shared = NTSound20.dll
 [ProgramFiles]
 File = license.txt|2581|5/3/2020 2:10:38 PM
 File = Neotext.org.url|78|7/24/2017 2:30:00 AM
-File = RemindMe.exe|490600|3/11/2024 7:21:20 AM
-AllUser = remindme.mdb|225280|3/11/2024 7:21:14 AM
+File = RemindMe.exe|490600|3/24/2024 11:59:21 PM
+AllUser = remindme.mdb|225280|3/24/2024 11:59:14 PM
 File = remindme.pub|0|8/17/2016 2:24:30 PM
-File = RmdMeSrv.exe|109672|3/11/2024 7:21:20 AM
-File = Utility.exe|203880|3/11/2024 7:21:20 AM
+File = RmdMeSrv.exe|109672|3/24/2024 11:59:20 PM
+File = Utility.exe|203880|3/24/2024 11:59:21 PM
 Folder = Help|<DIR>|6/10/2021 6:17:08 AM
 File = Help\custom.js|2417|12/17/2013 4:40:00 PM
 File = Help\Donations.png|6186|6/1/2018 11:31:54 PM
@@ -115,23 +115,23 @@ System=MSVCRT40.DLL|326656|6/1/1999 5:20:54 PM|4.22.0000
 System=MSVCRT.DLL|278581|2/17/2004 5:15:24 AM|6.00.9782.0
 System=RICHED32.DLL|3584|7/27/2007 6:00:00 AM|5.1.2600.0 (xpclient.010817-1148)
 Shared=msxml2.dll|701440|4/14/2008 5:42:02 AM|8.30.9529.0
-Shared=NTShell22.dll|97384|3/11/2024 7:21:15 AM|2.02.0400
-Shared=NTPopup21.dll|81000|3/11/2024 7:21:15 AM|2.01.0407
-Shared=NTSound20.dll|56424|3/11/2024 7:21:16 AM|2.00.0400
+Shared=NTShell22.dll|97384|3/24/2024 11:59:16 PM|2.02.0400
+Shared=NTPopup21.dll|81000|3/24/2024 11:59:16 PM|2.01.0407
+Shared=NTSound20.dll|56424|3/24/2024 11:59:16 PM|2.00.0400
 System=wininet.dll|656384|7/27/2007 5:00:00 AM|6.00.2900.2180 (xpsp_sp2_rtm.040803-2158)
-Shared=NTControls22.ocx|417792|3/11/2024 7:20:31 AM|2.02.0406
+Shared=NTControls22.ocx|417792|3/24/2024 11:58:31 PM|2.02.0406
 Shared=MSCOMCTL.OCX|1081616|3/9/2004 4:45:46 PM|6.01.9782
 Shared=mscomct2.ocx|662288|3/9/2004 4:45:42 PM|6.01.9782
 Shared=msscript.ocx|107008|3/9/2004 4:45:34 PM|1.0.0.3715
 Shared=msado15.dll|536576|8/4/2004 12:56:44 AM|2.81.1117.0 (xpsp_sp2_rtm.040803-2158)
-Shared=NTSchedule20.dll|56424|3/11/2024 7:21:15 AM|2.00.0461
+Shared=NTSchedule20.dll|56424|3/24/2024 11:59:15 PM|2.00.0461
 System=advapi32.dll|617472|4/14/2008 5:41:50 AM|5.1.2600.2180 (xpsp_sp2_rtm.040803-2158)
 Shared=userenv.dll|727040|4/14/2008 5:42:10 AM|5.1.2600.5512 (xpsp.080413-2113)
 Shared=comdlg32.ocx|152848|3/9/2004 4:45:36 PM|6.01.9782
 Shared=richtx32.ocx|212240|3/9/2004 4:45:38 PM|6.01.9782
 System=ws2_32.dll|82432|4/14/2008 5:42:12 AM|5.1.2600.2180 (xpsp_sp2_rtm.040803-2158)
 System=wsock32.dll|22528|4/14/2008 5:42:12 AM|5.1.2600.2180 (xpsp_sp2_rtm.040803-2158)
-Shared=NTService20.dll|142440|3/11/2024 7:21:16 AM|2.00.0002
+Shared=NTService20.dll|142440|3/24/2024 11:59:17 PM|2.00.0002
 Shared=ntsvc.ocx|34304|12/23/2012 9:56:00 PM|1, 0, 0, 1
 Shared=msjro.dll|102400|12/23/2012 10:56:04 PM|2.81.1117.0 (xpsp_sp2_rtm.040803-2158)
 Shared=msxml.dll|506368|4/14/2008 5:42:00 AM|8.00.7002.0
