--- a/Source/InstallerStar/Projects/Wizard/Manifest.ini
+++ b/Source/InstallerStar/Projects/Wizard/Manifest.ini
@@ -14,7 +14,8 @@ Website= <http> ;http link to the website for more information
 Contact= <phone> ;phone number to contact the author or distributor
 MDac = <bool> ;include data access compionents, default if false
 CreateRestorePoint = <bool> ;by default restore point is created
-System = False
+Legacy = <bool> ;install to program files only, not user folders
+System = <bool> ;install system dlls too, else activex only dlls
 
 [Shortcuts] ;these are put in under the start menu
 Folder = <text> ;usually will be same as appvalue
