--- a/Source/Creata-Tree/Deploy/Manifest.ini
+++ b/Source/Creata-Tree/Deploy/Manifest.ini
@@ -8,7 +8,7 @@ Website= http://www.neotext.org
 Contact= +1-952-457-9224
 Restore= True
 Legacy= False
-System= False
+System= True
 
 [ExecuteWaits]
 Backup=
@@ -51,8 +51,8 @@ Shared=msxml2.dll
 .tree|CreataTree.Tree|Creata-Tree File|Open|CreataTree.exe|%1
 
 [ProgramFiles]
-File = CreataTree.exe|389120|12/22/2024 1:27:42 AM
-File = CreataTree.ini|210|12/22/2024 1:27:48 AM
+File = CreataTree.exe|389120|1/22/2025 1:12:24 AM
+File = CreataTree.ini|210|1/22/2025 1:12:30 AM
 File = license.txt|2581|5/3/2020 2:11:02 PM
 File = Neotext.org.url|78|7/24/2017 2:30:00 AM
 Folder = Engine|<DIR>|6/16/2024 1:16:19 PM
@@ -264,13 +264,13 @@ System=winmm.dll|176128|7/27/2007 5:00:00 AM|5.1.2600.2180 (xpsp_sp2_rtm.040803-
 Shared=shdocvw.dll|1499136|4/14/2008 5:42:06 AM|6.00.2900.5512 (xpsp.080413-2105)
 Shared=comdlg32.ocx|152848|3/9/2004 4:45:36 PM|6.01.9782
 Shared=MSCOMCTL.OCX|1081616|3/9/2004 4:45:46 PM|6.01.9782
-Shared=NTControls22.ocx|417792|12/22/2024 1:27:06 AM|2.02.0406
+Shared=NTControls22.ocx|417792|1/22/2025 1:11:44 AM|2.02.0406
 Shared=msxml.dll|506368|4/14/2008 5:42:00 AM|8.00.7002.0
-Shared=NTCipher10.dll|147456|12/22/2024 1:26:54 AM|1.00.0430
+Shared=NTCipher10.dll|147456|1/22/2025 1:11:31 AM|1.00.0430
 System=comdlg32.dll|276992|4/14/2008 5:41:52 AM|6.00.2900.2180 (xpsp_sp2_rtm.040803-2158)
 System=advapi32.dll|617472|4/14/2008 5:41:50 AM|5.1.2600.2180 (xpsp_sp2_rtm.040803-2158)
 System=wininet.dll|666112|4/14/2008 5:42:10 AM|6.00.2900.2180 (xpsp_sp2_rtm.040803-2158)
-Shared=richtx32.ocx|212240|3/9/2004 4:45:38 PM|6.01.9782
+Shared=RICHTX32.OCX|212240|3/9/2004 4:45:38 PM|6.01.9782
 System=ws2_32.dll|82432|4/14/2008 5:42:12 AM|5.1.2600.2180 (xpsp_sp2_rtm.040803-2158)
 System=wsock32.dll|22528|4/14/2008 5:42:12 AM|5.1.2600.2180 (xpsp_sp2_rtm.040803-2158)
 Shared=MSWINSCK.OCX|124688|3/9/2004 4:45:34 PM|6.01.9782
