--- a/Source/HouseOfGlass/Deploy/Manifest.ini
+++ b/Source/HouseOfGlass/Deploy/Manifest.ini
@@ -8,7 +8,7 @@ Website= http://www.neotext.org
 Contact= +1-952-457-9224
 Restore= True
 Legacy= False
-System= False
+System= True
 
 [ExecuteWaits]
 Backup=HouseOfGlass.exe|setupbackup
@@ -36,8 +36,8 @@ Exact = ole32.dll
 Exact = MSVBVM60.DLL
 
 [ProgramFiles]
-File = HouseOfGlass.exe|208896|12/22/2024 1:27:16 AM
-AllUser = HouseOfGlass.mdb|143360|12/22/2024 1:27:48 AM
+File = HouseOfGlass.exe|208896|1/22/2025 1:11:55 AM
+AllUser = HouseOfGlass.mdb|143360|1/22/2025 1:12:30 AM
 File = license.txt|5379|3/6/2018 10:50:28 PM
 File = Neotext.org.url|78|7/24/2017 2:30:00 AM
 Folder = Base|<DIR>|6/16/2024 1:16:20 PM
