--- a/Source/IdentAuth/Deploy/Manifest.ini
+++ b/Source/IdentAuth/Deploy/Manifest.ini
@@ -8,7 +8,7 @@ Website= http://www.neotext.org
 Contact= +1-952-457-9224
 Restore= True
 Legacy= False
-System= False
+System= True
 
 [ExecuteWaits]
 Backup=
@@ -33,11 +33,11 @@ Exact = ole32.dll
 Exact = MSVBVM60.DLL
 
 [ProgramFiles]
-File = Ident.exe|212992|12/22/2024 1:27:45 AM
+File = Ident.exe|212992|1/22/2025 1:12:26 AM
 File = Ident.ini|1626|12/19/2019 12:12:28 AM
 File = license.txt|2581|5/3/2020 2:10:50 PM
 File = Neotext.org.url|78|7/24/2017 2:30:00 AM
-File = Reload.exe|53248|12/22/2024 1:27:44 AM
+File = Reload.exe|53248|1/22/2025 1:12:26 AM
 
 [WindowsSystem32]
 System=iphlpapi.dll|94720|4/14/2008 6:00:00 AM|5.1.2600.5512 (xpsp.080413-0852)
