--- a/Source/RemindMe/Deploy/Manifest.ini
+++ b/Source/RemindMe/Deploy/Manifest.ini
@@ -8,7 +8,7 @@ Website= http://www.neotext.org
 Contact= +1-952-457-9224
 Restore= False
 Legacy= False
-System= False
+System= True
 
 [ExecuteWaits]
 Backup=Utility.exe|-setupbackup 1
@@ -55,11 +55,11 @@ Shared = NTSound20.dll
 [ProgramFiles]
 File = license.txt|2581|5/3/2020 2:10:38 PM
 File = Neotext.org.url|78|7/24/2017 2:30:00 AM
-File = RemindMe.exe|487424|12/22/2024 1:27:39 AM
-AllUser = remindme.mdb|225280|12/22/2024 1:27:49 AM
+File = RemindMe.exe|487424|1/22/2025 1:12:21 AM
+AllUser = remindme.mdb|225280|1/22/2025 1:12:30 AM
 File = remindme.pub|0|8/17/2016 2:24:30 PM
-File = RmdMeSrv.exe|106496|12/22/2024 1:27:38 AM
-File = Utility.exe|200704|12/22/2024 1:27:40 AM
+File = RmdMeSrv.exe|106496|1/22/2025 1:12:20 AM
+File = Utility.exe|200704|1/22/2025 1:12:22 AM
 Folder = Help|<DIR>|6/16/2024 1:17:07 PM
 File = Help\custom.js|2417|12/17/2013 4:40:00 PM
 File = Help\Donations.png|6186|6/1/2018 11:31:54 PM
@@ -116,23 +116,23 @@ System=MSVCRT40.DLL|326656|6/1/1999 5:20:54 PM|4.22.0000
 System=MSVCRT.DLL|278581|2/17/2004 5:15:24 AM|6.00.9782.0
 System=RICHED32.DLL|3584|7/27/2007 6:00:00 AM|5.1.2600.0 (xpclient.010817-1148)
 Shared=msxml2.dll|701440|4/14/2008 5:42:02 AM|8.30.9529.0
-Shared=NTShell22.dll|94208|12/22/2024 1:26:58 AM|2.02.0400
-Shared=NTPopup21.dll|77824|12/22/2024 1:26:58 AM|2.01.0407
-Shared=NTSound20.dll|53248|12/22/2024 1:26:59 AM|2.00.0400
+Shared=NTShell22.dll|94208|1/22/2025 1:11:35 AM|2.02.0400
+Shared=NTPopup21.dll|77824|1/22/2025 1:11:34 AM|2.01.0407
+Shared=NTSound20.dll|53248|1/22/2025 1:11:36 AM|2.00.0400
 System=wininet.dll|656384|7/27/2007 5:00:00 AM|6.00.2900.2180 (xpsp_sp2_rtm.040803-2158)
-Shared=NTControls22.ocx|417792|12/22/2024 1:27:06 AM|2.02.0406
+Shared=NTControls22.ocx|417792|1/22/2025 1:11:44 AM|2.02.0406
 Shared=MSCOMCTL.OCX|1081616|3/9/2004 4:45:46 PM|6.01.9782
 Shared=mscomct2.ocx|662288|3/9/2004 4:45:42 PM|6.01.9782
 Shared=msscript.ocx|107008|3/9/2004 4:45:34 PM|1.0.0.3715
 Shared=msado15.dll|536576|8/4/2004 12:56:44 AM|2.81.1117.0 (xpsp_sp2_rtm.040803-2158)
-Shared=NTSchedule20.dll|53248|12/22/2024 1:26:57 AM|2.00.0461
+Shared=NTSchedule20.dll|53248|1/22/2025 1:11:34 AM|2.00.0461
 System=advapi32.dll|617472|4/14/2008 5:41:50 AM|5.1.2600.2180 (xpsp_sp2_rtm.040803-2158)
 Shared=userenv.dll|727040|4/14/2008 5:42:10 AM|5.1.2600.5512 (xpsp.080413-2113)
-Shared=comdlg32.ocx|152848|3/9/2004 4:45:36 PM|6.01.9782
-Shared=richtx32.ocx|212240|3/9/2004 4:45:38 PM|6.01.9782
+Shared=COMDLG32.OCX|152848|3/9/2004 4:45:36 PM|6.01.9782
+Shared=RICHTX32.OCX|212240|3/9/2004 4:45:38 PM|6.01.9782
 System=ws2_32.dll|82432|4/14/2008 5:42:12 AM|5.1.2600.2180 (xpsp_sp2_rtm.040803-2158)
 System=wsock32.dll|22528|4/14/2008 5:42:12 AM|5.1.2600.2180 (xpsp_sp2_rtm.040803-2158)
-Shared=NTService20.dll|139264|12/22/2024 1:27:01 AM|2.00.0002
+Shared=NTService20.dll|139264|1/22/2025 1:11:39 AM|2.00.0002
 Shared=ntsvc.ocx|34304|12/23/2012 9:56:00 PM|1, 0, 0, 1
 Shared=msjro.dll|102400|12/23/2012 10:56:04 PM|2.81.1117.0 (xpsp_sp2_rtm.040803-2158)
 Shared=msxml.dll|506368|4/14/2008 5:42:00 AM|8.00.7002.0
