--- a/Source/To-Doster/Deploy/Manifest.ini
+++ b/Source/To-Doster/Deploy/Manifest.ini
@@ -8,7 +8,7 @@ Website= http://www.neotext.org
 Contact= +1-952-457-9224
 Restore= False
 Legacy= False
-System= False
+System= True
 
 [ExecuteWaits]
 Backup=
