--- a/Source/MaxLand/Deploy/Manifest.ini
+++ b/Source/MaxLand/Deploy/Manifest.ini
@@ -8,7 +8,7 @@ Website= http://www.neotext.org
 Contact= +1-952-457-9224
 Restore= True
 Legacy= False
-System= True
+System= False
 
 [ExecuteWaits]
 Backup=MaxLandApp.exe|/backupdb
@@ -38,8 +38,8 @@ File = Commands.ini|52|1/10/2021 10:12:48 PM
 File = ctrls.bmp|0|9/25/2015 3:49:54 PM
 File = drop.bmp|241078|4/13/2015 6:56:00 PM
 File = license.txt|2581|5/3/2020 2:10:44 PM
-File = MaxLandApp.exe|610304|1/22/2025 1:12:17 AM
-AllUser = MaxLandApp.mdb|143360|1/22/2025 1:12:30 AM
+File = MaxLandApp.exe|610304|2/23/2025 5:23:00 AM
+AllUser = MaxLandApp.mdb|143360|2/23/2025 5:23:10 AM
 File = mouse.cur|326|3/25/2004 12:23:00 PM
 File = Neotext.org.url|78|7/24/2017 2:30:00 AM
 File = test.bat|0|5/19/2016 9:08:46 PM
