--- a/Source/MaxLand/Deploy/Manifest.ini
+++ b/Source/MaxLand/Deploy/Manifest.ini
@@ -37,8 +37,8 @@ Exact = MSVBVM60.DLL
 File = Commands.ini|0|8/4/2025 7:03:45 PM
 File = drop.bmp|241078|4/13/2015 7:56:00 PM
 File = license.txt|2581|5/3/2020 3:10:44 PM
-File = MaxLandApp.exe|495616|8/5/2025 10:18:25 AM
-AllUser = MaxLandApp.mdb|143360|8/5/2025 10:18:34 AM
+File = MaxLandApp.exe|499712|8/8/2025 8:10:41 PM
+AllUser = MaxLandApp.mdb|143360|8/8/2025 8:10:50 PM
 File = mouse.cur|326|3/25/2004 1:23:00 PM
 File = Neotext.org.url|78|7/24/2017 3:30:00 AM
 File = Thumbs.db|6656|1/2/2010 2:57:58 AM
@@ -52,9 +52,9 @@ File = Help\SketchUp 2014.zip|22522|8/2/2025 7:52:00 PM
 File = Help\Thumbs.db|19456|7/29/2025 7:57:30 AM
 Folder = Levels|<DIR>|8/4/2025 11:35:27 AM
 File = Levels\Harddrive.vbx|4656|8/4/2025 9:03:55 PM
-File = Levels\harddrive.xml|792|8/4/2025 9:08:07 PM
-File = Levels\Level1.vbx|41749|8/4/2025 8:55:50 PM
-File = Levels\Level1.xml|2237|8/5/2025 9:34:54 AM
+File = Levels\harddrive.xml|792|8/5/2025 5:54:14 PM
+File = Levels\Level1.vbx|41844|8/8/2025 8:08:46 PM
+File = Levels\Level1.xml|2528|8/8/2025 8:09:49 PM
 File = Levels\Level2.vbx|1688|7/22/2025 7:25:08 PM
 File = Levels\level2.xml|642|8/4/2025 3:15:46 PM
 Folder = Models|<DIR>|8/2/2025 12:57:42 PM
@@ -383,7 +383,7 @@ Shared=msjro.dll|102400|12/23/2012 11:56:04 PM|2.81.1117.0 (xpsp_sp2_rtm.040803-
 Shared=dx8vb.dll|1227264|4/14/2008 7:00:00 AM|5.03.2600.5512 (xpsp.080413-0845)
 Shared=msado15.dll|536576|8/4/2004 1:56:44 AM|2.81.1117.0 (xpsp_sp2_rtm.040803-2158)
 Shared=msxml.dll|506368|4/14/2008 6:42:00 AM|8.00.7002.0
-Shared=NTNodes10.dll|290816|8/5/2025 10:17:58 AM|3.01
+Shared=NTNodes10.dll|290816|8/8/2025 8:10:13 PM|3.01
 Shared=scrrun.dll|151824|7/15/2000 3:10:08 PM|5.0.0.3715
 Shared=userenv.dll|727040|4/14/2008 5:42:10 AM|5.1.2600.5512 (xpsp.080413-2113)
 System=TLBINF32.DLL|150528|2/23/2004 1:00:00 AM|1.10.9782
