--- a/Source/MaxLand/Deploy/Manifest.ini
+++ b/Source/MaxLand/Deploy/Manifest.ini
@@ -34,35 +34,35 @@ Exact = ole32.dll
 Exact = MSVBVM60.DLL
 
 [ProgramFiles]
-File = Commands.ini|0|8/4/2025 7:03:45 PM
+File = Commands.ini|0|8/4/2025 7:03:46 PM
 File = drop.bmp|241078|4/13/2015 7:56:00 PM
 File = license.txt|2581|5/3/2020 3:10:44 PM
-File = MaxLandApp.exe|499712|8/8/2025 8:10:41 PM
-AllUser = MaxLandApp.mdb|143360|8/8/2025 8:10:50 PM
+File = MaxLandApp.exe|507904|8/10/2025 5:27:29 PM
+AllUser = MaxLandApp.mdb|143360|8/10/2025 5:27:40 PM
 File = mouse.cur|326|3/25/2004 1:23:00 PM
 File = Neotext.org.url|78|7/24/2017 3:30:00 AM
 File = Thumbs.db|6656|1/2/2010 2:57:58 AM
-Folder = Help|<DIR>|8/2/2025 7:52:13 PM
-File = Help\Index.htm|10731|7/31/2025 10:52:31 AM
-File = Help\Maxland Markup Language Syntax and Reference.doc|474624|8/1/2025 1:53:40 PM
+Folder = Help|<DIR>|8/9/2025 12:14:47 AM
+File = Help\Index.htm|10731|7/31/2025 10:52:32 AM
+File = Help\Maxland Markup Language Syntax and Reference.doc|474624|8/1/2025 1:53:42 PM
 File = Help\Screenshot.png|937151|6/2/2018 4:11:58 AM
 File = Help\Screenshot2.png|654069|6/2/2018 4:12:08 AM
 File = Help\Screenshot3.png|693795|6/2/2018 4:12:28 AM
-File = Help\SketchUp 2014.zip|22522|8/2/2025 7:52:00 PM
+File = Help\SketchUp 2014.zip|22522|8/2/2025 7:52:02 PM
 File = Help\Thumbs.db|19456|7/29/2025 7:57:30 AM
 Folder = Levels|<DIR>|8/4/2025 11:35:27 AM
-File = Levels\Harddrive.vbx|4656|8/4/2025 9:03:55 PM
-File = Levels\harddrive.xml|792|8/5/2025 5:54:14 PM
-File = Levels\Level1.vbx|41844|8/8/2025 8:08:46 PM
-File = Levels\Level1.xml|2528|8/8/2025 8:09:49 PM
+File = Levels\Harddrive.vbx|4656|8/4/2025 9:03:56 PM
+File = Levels\harddrive.xml|792|8/5/2025 5:54:16 PM
+File = Levels\Level1.vbx|41844|8/8/2025 8:08:48 PM
+File = Levels\Level1.xml|2544|8/10/2025 5:20:20 PM
 File = Levels\Level2.vbx|1688|7/22/2025 7:25:08 PM
-File = Levels\level2.xml|642|8/4/2025 3:15:46 PM
+File = Levels\level2.xml|642|8/4/2025 3:15:48 PM
 Folder = Models|<DIR>|8/2/2025 12:57:42 PM
 File = Models\arm.x|112046|12/15/2020 10:00:24 PM
 File = Models\backfaces.x|97193|8/27/2015 12:33:00 PM
 File = Models\blacklawn.x|10777|8/19/2015 5:40:00 AM
 File = Models\bounds-pawn.x|7010|8/13/2015 7:49:00 PM
-File = Models\bounds-player.x|7047|8/2/2025 12:57:43 PM
+File = Models\bounds-player.x|7047|8/2/2025 12:57:44 PM
 File = Models\bubble.bmp|66614|12/18/2020 1:59:16 AM
 File = Models\bubble2.bmp|196662|12/21/2020 9:21:36 PM
 File = Models\bubble3.bmp|196662|12/18/2020 1:59:14 AM
@@ -375,6 +375,7 @@ Folder = Sounds|<DIR>|5/21/2025 8:57:30 PM
 File = Sounds\waterfall.mp3|373681|9/5/2015 8:13:00 PM
 
 [WindowsSystem32]
+System=comdlg32.dll|276992|7/27/2007 6:00:00 AM|6.00.2900.2180 (xpsp_sp2_rtm.040803-2158)
 System=winmm.dll|176128|7/27/2007 6:00:00 AM|5.1.2600.2180 (xpsp_sp2_rtm.040803-2158)
 System=advapi32.dll|616960|7/27/2007 6:00:00 AM|5.1.2600.2180 (xpsp_sp2_rtm.040803-2158)
 Shared=MaxLandLib.dll|49152|3/2/2003 7:29:54 PM|
@@ -383,8 +384,9 @@ Shared=msjro.dll|102400|12/23/2012 11:56:04 PM|2.81.1117.0 (xpsp_sp2_rtm.040803-
 Shared=dx8vb.dll|1227264|4/14/2008 7:00:00 AM|5.03.2600.5512 (xpsp.080413-0845)
 Shared=msado15.dll|536576|8/4/2004 1:56:44 AM|2.81.1117.0 (xpsp_sp2_rtm.040803-2158)
 Shared=msxml.dll|506368|4/14/2008 6:42:00 AM|8.00.7002.0
-Shared=NTNodes10.dll|290816|8/8/2025 8:10:13 PM|3.01
+Shared=NTNodes10.dll|290816|8/10/2025 5:27:00 PM|3.01
 Shared=scrrun.dll|151824|7/15/2000 3:10:08 PM|5.0.0.3715
+System=APC63.dll|540672|11/2/2001 11:21:14 AM|6.01.9402
 Shared=userenv.dll|727040|4/14/2008 5:42:10 AM|5.1.2600.5512 (xpsp.080413-2113)
 System=TLBINF32.DLL|150528|2/23/2004 1:00:00 AM|1.10.9782
 
