--- a/Source/HouseOfGlass/Deploy/Manifest.ini
+++ b/Source/HouseOfGlass/Deploy/Manifest.ini
@@ -36,8 +36,8 @@ Exact = ole32.dll
 Exact = MSVBVM60.DLL
 
 [ProgramFiles]
-File = HouseOfGlass.exe|208896|8/12/2025 5:06:26 AM
-AllUser = HouseOfGlass.mdb|143360|8/12/2025 5:06:47 AM
+File = HouseOfGlass.exe|208896|8/17/2025 4:12:34 PM
+AllUser = HouseOfGlass.mdb|143360|8/17/2025 4:12:54 PM
 File = license.txt|5379|3/6/2018 11:50:28 PM
 File = Neotext.org.url|78|7/24/2017 3:30:00 AM
 Folder = Base|<DIR>|5/21/2025 8:57:43 PM
