--- a/Source/IdentAuth/Deploy/Manifest.ini
+++ b/Source/IdentAuth/Deploy/Manifest.ini
@@ -33,11 +33,11 @@ Exact = ole32.dll
 Exact = MSVBVM60.DLL
 
 [ProgramFiles]
-File = Ident.exe|212992|8/12/2025 5:06:45 AM
+File = Ident.exe|212992|8/17/2025 4:12:52 PM
 File = Ident.ini|1626|12/19/2019 1:12:28 AM
 File = license.txt|2581|5/3/2020 3:10:50 PM
 File = Neotext.org.url|78|7/24/2017 3:30:00 AM
-File = Reload.exe|53248|8/12/2025 5:06:44 AM
+File = Reload.exe|53248|8/17/2025 4:12:51 PM
 
 [WindowsSystem32]
 System=iphlpapi.dll|94720|4/14/2008 7:00:00 AM|5.1.2600.5512 (xpsp.080413-0852)
