--- a/Source/Blacklawn/Deploy/Manifest.ini
+++ b/Source/Blacklawn/Deploy/Manifest.ini
@@ -36,9 +36,9 @@ Exact = ole32.dll
 Exact = MSVBVM60.DLL
 
 [ProgramFiles]
-File = Blacklawn.exe|2551808|8/12/2025 5:06:24 AM
-AllUser = Blacklawn.mdb|151552|8/12/2025 5:06:47 AM
-File = BlkLServer.exe|81920|8/12/2025 5:06:24 AM
+File = Blacklawn.exe|2551808|8/17/2025 4:12:32 PM
+AllUser = Blacklawn.mdb|151552|8/17/2025 4:12:54 PM
+File = BlkLServer.exe|81920|8/17/2025 4:12:33 PM
 File = BlkLServer.ini|355|10/15/2017 9:03:00 PM
 File = Commands.ini|85|3/26/2018 4:45:00 AM
 File = license.txt|2581|5/3/2020 3:11:14 PM
@@ -242,7 +242,7 @@ Shared=dx8vb.dll|1227264|4/14/2008 7:00:00 AM|5.03.2600.5512 (xpsp.080413-0845)
 Shared=msjro.dll|102400|12/23/2012 11:56:04 PM|2.81.1117.0 (xpsp_sp2_rtm.040803-2158)
 Shared=msado15.dll|536576|8/4/2004 1:56:44 AM|2.81.1117.0 (xpsp_sp2_rtm.040803-2158)
 Shared=userenv.dll|727040|4/14/2008 5:42:10 AM|5.1.2600.5512 (xpsp.080413-2113)
-Shared=NTService20.dll|139264|8/12/2025 5:06:12 AM|2.00.0002
+Shared=NTService20.dll|139264|8/17/2025 4:12:22 PM|2.00.0002
 Shared=ntsvc.ocx|34304|12/23/2012 10:56:00 PM|1, 0, 0, 1
 
 
