--- a/Source/MaxLand/Deploy/Manifest.ini
+++ b/Source/MaxLand/Deploy/Manifest.ini
@@ -37,8 +37,8 @@ Exact = MSVBVM60.DLL
 File = Commands.ini|0|8/4/2025 7:03:46 PM
 File = drop.bmp|241078|4/13/2015 7:56:00 PM
 File = license.txt|2581|5/3/2020 3:10:44 PM
-File = MaxLandApp.exe|507904|8/12/2025 5:06:38 AM
-AllUser = MaxLandApp.mdb|143360|8/12/2025 5:06:48 AM
+File = MaxLandApp.exe|507904|8/17/2025 4:12:45 PM
+AllUser = MaxLandApp.mdb|143360|8/17/2025 4:12:54 PM
 File = mouse.cur|326|3/25/2004 1:23:00 PM
 File = Neotext.org.url|78|7/24/2017 3:30:00 AM
 File = Thumbs.db|6656|1/2/2010 2:57:58 AM
@@ -384,7 +384,7 @@ Shared=msjro.dll|102400|12/23/2012 11:56:04 PM|2.81.1117.0 (xpsp_sp2_rtm.040803-
 Shared=dx8vb.dll|1227264|4/14/2008 7:00:00 AM|5.03.2600.5512 (xpsp.080413-0845)
 Shared=msado15.dll|536576|8/4/2004 1:56:44 AM|2.81.1117.0 (xpsp_sp2_rtm.040803-2158)
 Shared=msxml.dll|506368|4/14/2008 6:42:00 AM|8.00.7002.0
-Shared=NTNodes10.dll|290816|8/12/2025 5:06:08 AM|3.01
+Shared=NTNodes10.dll|290816|8/17/2025 4:12:18 PM|3.01
 Shared=scrrun.dll|151824|7/15/2000 3:10:08 PM|5.0.0.3715
 System=APC63.dll|540672|11/2/2001 11:21:14 AM|6.01.9402
 Shared=userenv.dll|727040|4/14/2008 5:42:10 AM|5.1.2600.5512 (xpsp.080413-2113)
