--- a/Source/To-Doster/Deploy/Manifest.ini
+++ b/Source/To-Doster/Deploy/Manifest.ini
@@ -42,7 +42,7 @@ Exact = MSVBVM60.DLL
 File = license.txt|2581|5/3/2020 3:10:20 PM
 File = Neotext.org.url|78|7/24/2017 3:30:00 AM
 File = todoster.asp|5714|11/24/2013 6:39:00 PM
-File = ToDoster.exe|172032|8/12/2025 5:06:25 AM
+File = ToDoster.exe|172032|8/17/2025 4:12:33 PM
 File = todoster.mdb|114688|10/21/2015 8:08:00 PM
 Folder = Help|<DIR>|5/21/2025 8:57:15 PM
 File = Help\addentry.png|3585|6/2/2018 12:31:56 AM
